feat: create view for make a test

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -113,7 +113,7 @@ h6 {
   color: white;
   font-family: 'Montserrat';
 }
-.nav {
+.nav-top {
   height: 80px;
   background-color: #542bc8;
   padding: 25px 35px 20px 40px;
