styles: Redecorate question structure

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -185,3 +185,16 @@ h6 {
 .card-profile {
   margin-top: 20px;
 }
+
+.line-card {
+  border-left-color: #542bc8;
+  border-bottom-left-radius: 0.25rem;
+}
+.card {
+  border: 0px solid rgba(0, 0, 0, 0.125);
+  border-left: 7px solid;
+  border-left-color: #542bc8;
+}
+.card-image {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
